# data_engineer_challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.db
app/: database.py  main.py  models.py  schemas.py  utils.py
app/reports/: report_1.sql  report_2.sql
app/routers/: delete_table.py  load_departments.py  load_table.py  read_table.py  reports.py
deploy/: create_resources.sh  deploy.sh
