[project]
name = "data-engineer-challenge"
version = "0.1.0"
description = "Globant Data Engineering Coding Challenge"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "azure-storage-blob>=12.25.0",
    "fastapi[standard]>=0.115.11",
    "mysql-connector-python>=9.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.39",
]
